Fix z-index and carrousel keys

--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -32,6 +32,7 @@
 }
 
 .floatingButton {
+    z-index: 200;
     position: fixed;
     bottom: 16px;
     top: unset;
